--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-unit-ts",
   "scripts": {
-    "test": "mocha ec2tests.js"
+    "test": "jest ec2.spec.js"
   },
   "devDependencies": {},
   "dependencies": {
@@ -9,10 +9,6 @@
     "@pulumi/awsx": "^0.18.10",
     "@pulumi/eks": "^0.18.21",
     "@pulumi/pulumi": "^1.12.0",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^13.1.8",
-    "mocha": "^7.0.0",
-    "ts-node": "^8.6.2",
-    "typescript": "^4.1.3"
+    "jest": "^26.6.3"
   }
 }
