--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@pulumi/aws": "^1.0.0",
     "@pulumi/awsx": "^0.18.10",
+    "@pulumi/azure": "^3.46.0",
     "@pulumi/eks": "^0.18.21",
     "@pulumi/pulumi": "^1.12.0",
     "jest": "^26.6.3"
